TB1 TB2 and TB3 implemented and tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,29 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Good hygiene for a security-ish C++ project
+# Core gateway library
 add_library(gateway
     src/parse_envelope.cpp
+    src/source_limiter.cpp
+    src/recv_loop.cpp
 )
 target_include_directories(gateway PUBLIC include)
 target_compile_options(gateway PRIVATE -Wall -Wextra -Wpedantic)
 
 enable_testing()
-add_executable(gateway_tests
-    tests/test_parse_envelope.cpp
-)
-target_link_libraries(gateway_tests PRIVATE gateway)
-add_test(NAME gateway_tests COMMAND gateway_tests)
+
+# Test: parse_envelope
+add_executable(test_parse_envelope tests/test_parse_envelope.cpp)
+target_link_libraries(test_parse_envelope PRIVATE gateway)
+add_test(NAME test_parse_envelope COMMAND test_parse_envelope)
+
+# Test: bounded_queue (header-only, no link to gateway needed)
+add_executable(test_bounded_queue tests/test_bounded_queue.cpp)
+target_include_directories(test_bounded_queue PRIVATE include)
+target_compile_options(test_bounded_queue PRIVATE -Wall -Wextra -Wpedantic)
+add_test(NAME test_bounded_queue COMMAND test_bounded_queue)
+
+# Test: source_limiter
+add_executable(test_source_limiter tests/test_source_limiter.cpp)
+target_link_libraries(test_source_limiter PRIVATE gateway)
+add_test(NAME test_source_limiter COMMAND test_source_limiter)
